tests/toylang/neg/001076_mutation.toylang
program a = { if a then sleep program a = { } . else sleep; } .
